Refactor and add like image